[package]
name = "gchat"
version = "0.1.0"
authors = ["Frankie Hui <frankie@netops.life>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
getopts = "0.2"
